# open-max

./: .gitignore  AGENTS.example.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.agents/skills/delegate/: SKILL.md
.agents/skills/delegate/scripts/: openmax-tmux
.agents/skills/parallel-explore/: SKILL.md
.claude/: launch.json
.github/workflows/: ci.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: main.rs  translate.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  client.rs  config.rs  doctor.rs  execution.rs  fallback.rs  hf.rs  hooks.rs  lib.rs  mlx.rs  permissions.rs  prompt.rs  providers.rs  registry.rs  sessions.rs  skills.rs  state.rs  templates.rs  tools.rs  trust.rs  types.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  catalog.rs  clipboard.rs  completion.rs  headless.rs  input.rs  main.rs  stdio.rs  theme.rs
crates/tui/src/ui/: context.rs  extensions.rs  markdown.rs  mascot.rs  mod.rs  model_picker.rs  models.rs  sessions.rs  tool_card.rs  transcript.rs
src/: App.tsx  api.ts  catalog.ts  highlight.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mlx.rs  projects.rs  settings.rs  state.rs  threads.rs
src-tauri/src/harness/: agent.rs  client.rs  mod.rs  tools.rs  types.rs
src/components/: Chat.tsx  CodePanel.tsx  Composer.tsx  DiffView.tsx  FileTree.tsx  Markdown.tsx  SettingsModal.tsx  Sidebar.tsx  ToolCard.tsx
