[workspace]
resolver = "2"
members = ["crates/core", "crates/tui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Open Max contributors"]
repository = "https://github.com/maxloffgren/open_max"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
regex = "1"
ignore = "0.4"
globset = "0.4"
similar = "2"
uuid = { version = "1", features = ["v4"] }

# Lean, fast binaries: thin LTO and symbol stripping keep the harness tiny so
# the model gets the machine.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "s"
