[package]
name = "open-max"
version = "0.1.0"
description = "Open Max — a minimal, local-first coding agent for macOS"
authors = ["Open Max contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "open_max_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
regex = "1"
ignore = "0.4"
globset = "0.4"
similar = "2"
uuid = { version = "1", features = ["v4"] }
