[package]
name = "open-max-bridge"
description = "Open Max JSON-RPC over stdio bridge: drive openmax --stdio from any host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "openmax-bridge"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
