[package]
name = "open-max-core"
description = "Open Max core: agent harness, tool sandbox, and optional local model serve"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "open_max_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
regex.workspace = true
ignore.workspace = true
globset.workspace = true
similar.workspace = true
uuid.workspace = true
toml.workspace = true
