[package]
name = "open-max-tui"
description = "Open Max: a minimal terminal harness for local models on Apple Silicon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "openmax"
path = "src/main.rs"

[dependencies]
open-max-core = { path = "../core" }
# scrolling-regions keeps the viewport painted during insert_before (the
# terminal scrolls a region instead of clear + redraw), removing flicker.
ratatui = { version = "0.30.2", features = ["scrolling-regions"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
lexopt = "0.3"
unicode-width = "0.2"
