[package]
name = "open-max-tui"
description = "Open Max: barebones high-performance agent harness TUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "openmax"
path = "src/main.rs"

[dependencies]
open-max-core = { path = "../core" }
ratatui = "0.30.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
# default-syntaxes: full pack (~200KB dump). No vendored subset; keep the dump.
# default-themes dropped: one Theme built in code (no themedump, no plist).
# regex-fancy: pure-Rust engine (no oniguruma C dep). Prefer over regex-onig for
# portable builds; onig is not clearly smaller and needs a C toolchain.
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-fancy"] }
lexopt = "0.3"
unicode-width = "0.2"
ignore.workspace = true
